--- a/search.html
+++ b/search.html
@@ -217,7 +217,7 @@
                 link: 'https://jungdapi.netlify.app/uhyeong',
                 imgSrc: 'https://i.postimg.cc/3NcNq4y7/image.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
-                school: '중학',
+                school: '중등',
                 grade: '1',
                 semester: '1',
             },
@@ -226,7 +226,7 @@
                 link: 'https://jungdapi.netlify.app/ch1',
                 imgSrc: 'https://i.postimg.cc/Vk1P8sjc/image.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
-                school: '중학',
+                school: '중등',
                 grade: '1',
                 semester: '1',
             },
@@ -235,7 +235,7 @@
                 link: 'https://jungdapi.netlify.app/rpm',
                 imgSrc: 'https://i.postimg.cc/zfYPHXtH/RMP.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
-                school: '중학',
+                school: '중등',
                 grade: '1',
                 semester: '1',
             },
@@ -244,7 +244,7 @@
                 link: 'https://jungdapi.netlify.app/ch2',
                 imgSrc: 'https://i.postimg.cc/3Nj26YjV/1-2.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
-                school: '중학',
+                school: '중등',
                 grade: '1',
                 semester: '2',
             },
@@ -253,7 +253,7 @@
                 link: 'https://jungdapi.netlify.app/ilg',
                 imgSrc: 'https://i.postimg.cc/T25Sv5Q1/ilove.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
-                school: '중학',
+                school: '중등',
                 grade: '1',
                 semester: '1',
             },
@@ -262,7 +262,7 @@
                 link: 'https://jungdapi.netlify.app/1316',
                 imgSrc: 'https://i.postimg.cc/5NcKz42V/1316.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
-                school: '중학',
+                school: '중등',
                 grade: '1',
                 semester: '1',
             },
@@ -271,7 +271,7 @@
                 link: 'https://jungdapi.netlify.app/100bal',
                 imgSrc: 'https://i.postimg.cc/LXWQBvQ0/image.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
-                school: '중학',
+                school: '중등',
                 grade: '1',
                 semester: '1',
             },
@@ -280,7 +280,7 @@
                 link: 'https://jungdapi.netlify.app/suryeok',
                 imgSrc: 'https://i.postimg.cc/zD4x87tg/image.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
-                school: '중학',
+                school: '중등',
                 grade: '1',
                 semester: '1',
             },
@@ -289,7 +289,7 @@
                 link: 'https://jungdapi.netlify.app/ssen',
                 imgSrc: 'https://i.postimg.cc/wv5kFPT5/image.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
-                school: '중학',
+                school: '중등',
                 grade: '1',
                 semester: '1',
             },
@@ -298,7 +298,7 @@
                 link: 'https://jungdapi.netlify.app/wonri',
                 imgSrc: 'https://i.postimg.cc/8P8wVdNc/image.png',
                 description: '클릭하여 답지를 다운로드 하세요.',
-                school: '중학',
+                school: '중등',
                 grade: '1',
                 semester: '1',
             },
@@ -307,7 +307,7 @@
                 link: 'https://jungdapi.netlify.app/han',
                 imgSrc: 'https://i.postimg.cc/c1mc73Yb/image.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
-                school: '중학',
+                school: '중등',
                 grade: '1',
                 semester: '1',
             },
@@ -316,7 +316,7 @@
                 link: 'https://jungdapi.netlify.app/babba',
                 imgSrc: 'https://i.postimg.cc/TwSWv8r7/XL-1.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
-                school: '중학',
+                school: '중등',
                 grade: '1',
                 semester: '1',
             },
@@ -325,7 +325,7 @@
                 link: 'https://jungdapi.netlify.app/ex2',
                 imgSrc: 'https://i.postimg.cc/Kj6LBXjk/XL.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
-                school: '고등',
+                school: '중등',
                 grade: '1',
                 semester: '1',
             },
@@ -334,7 +334,7 @@
                 link: 'https://jungdapi.netlify.app/o2',
                 imgSrc: 'https://i.postimg.cc/KvJNSFP5/XL-1.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
-                school: '중학',
+                school: '중등',
                 grade: '1',
                 semester: '2',
             },
@@ -343,7 +343,7 @@
                 link: 'https://jungdapi.netlify.app/bite',
                 imgSrc: 'https://i.postimg.cc/65XWJxWT/XL-2.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
-                school: '중학',
+                school: '중등',
                 grade: '1',
                 semester: '1',
             },
